<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>rider_node</name>
  <version>0.0.1</version>
  <description>ROS 2 Project : rider_node</description>
  <license>Apache 2.0</license>
  <maintainer email="doney0222@naver.com">Sung</maintainer>
  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend>dynamixel_sdk</depend>
  <depend>geometry_msgs</depend>
  <depend>message_filters</depend>
  <depend>nav_msgs</depend>
  <depend>rclcpp</depend>
  <depend>rcutils</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>std_srvs</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>
  <depend>turtlebot3_msgs</depend>
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
