<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>rider_simulation</name>
  <version>0.0.2</version>
  <description>ROS 2 Project : rider_simulation</description>
  <maintainer email="doney0222@naver.com">Sung</maintainer>
  <license>Apache License 2.0</license>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>rider_description</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
